infra/k8s/playground-eks/patch-core-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
  namespace: aditi-stays
spec:
  replicas: 1
  strategy:
    $patch: replace
    type: Recreate
  template:
    spec:
      affinity: {}
      containers:
        - name: core-api
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
