infra/k8s/playground-eks/patch-core-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-api
  namespace: aditi-stays
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: "200-399"
