infra/k8s/playground-eks/delete-base-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aditi-stays-ingress
  namespace: aditi-stays
$patch: delete
